--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>מחשבון RSU - סעיף 102</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link href="/RSUCalc/main.css" rel="stylesheet"></head>
+  <link href="main.css" rel="stylesheet"></head>
   <body>
     <div class="container">
       <div class="jumbotron text-center title">
@@ -24,7 +25,7 @@
         <span dir=rtl> האתר נכתב כולו בקוד פתוח אשר זמין ב<a href="https://github.com/rot-13/RSUCalc"> GitHub</a>. אני עושה שימוש ב Google Analytics אך ורק כדי לעקוב אחר מספר המשתמשים באתר. המידע האישי מהאתר אינו נקרא על ידי, הפרטיות של המשתמשים באתר מוגנת.</span>
       </div>
     </div>
-  <script type="text/javascript" src="/RSUCalc/bundle.js"></script></body>
+  <script type="text/javascript" src="bundle.js"></script></body>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
